Finish FungIO prototype