@@ -34,6 +34,12 @@ lazy val core = project
       "org.typelevel" %% "cats-effect-kernel" % catsEffectVersion,
       "org.typelevel" %% "cats-effect-laws" % catsEffectVersion % Test,
       "org.typelevel" %% "discipline-specs2" % disciplineSpecs2Version % Test
+    ),
+    javacOptions ++= Seq(
+      "--add-modules=org.graalvm.truffle",
+      "--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED",
+      "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED",
+      "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED"
     )
   )
 
